concluding yaml file reading tests

--- a/test/complx-test-proj/formation.yaml
+++ b/test/complx-test-proj/formation.yaml
@@ -1,20 +1,20 @@
 definition:
-  - name: fork
+  fork:
     type: fork
 
-  - name: extract-first-name
+  extract-first-name:
     type: command
     cmd: node ../node-procs/test-extract-prop.js
     env:
       PROP_NAME: first_name
 
-  - name: extract-last-name
+  extract-last-name:
     type: command
     cmd: node ../node-procs/test-extract-prop.js
     env:
       PROP_NAME: last_name
 
-  - name: merge
+  merge:
     type: merge
 
 flow:
